# dep-rank

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/actions/setup-uv/: README.md  action.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-approve.yml  dependency-cooldown-gate.yml  dependency-cooldown-rescan.yml  dependency-cooldown-scan.yml  dependency-cooldown.yml  dependency-safety.yml  osv-scanner-pr.yml  osv-scanner-scheduled.yml  pre-commit-autoupdate.yml  publish.yml  release.yml  scraper-drift-check.yml  security.yml  tag-release.yml
src/dep_rank/: __init__.py
src/dep_rank/cli/: __init__.py  app.py  formatters.py
src/dep_rank/core/: __init__.py  cache.py  graphql.py  models.py  rate_limiter.py  scraper.py  search.py  trust.py  validation.py
src/dep_rank/mcp/: __init__.py  server.py
src/dep_rank/scripts/: drift_check.py
tests/: README.md  conftest.py  test_conftest.py
tests/cli/: test_commands.py  test_formatters.py
tests/core/: test_cache.py  test_cache_swr.py  test_drift_check.py  test_graphql.py  test_models.py  test_rate_limiter.py  test_scraper.py  test_scraper_adaptive_stop.py  test_scraper_concurrency.py  test_scraper_streaming.py  test_search.py  test_trust.py  test_validation.py
tests/mcp/: test_lifecycle.py  test_prompts.py  test_tools.py
