[project]
name = "dep-rank"
dynamic = ["version"]
description = "Analyze GitHub repository dependents by star count. CLI + MCP server."
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "j7an"}
]
readme = "README.md"
keywords = ["github", "dependencies", "cli", "stars", "ranking", "dependents", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.13.5,<4",
    "aiosqlite>=0.19,<1",
    "selectolax>=0.3,<1",
    "pydantic>=2.13.3,<3",
    "appdirs>=1.4,<2",
    "click>=8.3.2,<9",
    "rich>=15.0.0,<16",
    "fastmcp>=3.1,<4",
]

[project.scripts]
dep-rank = "dep_rank.cli.app:cli"
dep-rank-mcp = "dep_rank.mcp.server:main"

[project.urls]
Homepage = "https://github.com/j7an/dep-rank"
Repository = "https://github.com/j7an/dep-rank"
Issues = "https://github.com/j7an/dep-rank/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "ruff>=0.15.11",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "types-appdirs>=1.4",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dep_rank"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dep_rank/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=dep_rank --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["src/dep_rank/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "dep_rank.cli.app"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "dep_rank.mcp.server"
ignore_missing_imports = true
disallow_untyped_decorators = false
# FastMCP injects Context at runtime; ctx: Context = None is the idiomatic pattern
no_implicit_optional = false
disable_error_code = ["union-attr"]
