[project]
name = "dep-rank"
dynamic = ["version"]
description = "Analyze GitHub repository dependents, ranked by stars or trust."
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "j7an"}
]
readme = "README.md"
keywords = ["github", "dependencies", "cli", "stars", "ranking", "dependents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.14,<4",
    "aiosqlite>=0.19,<1",
    "selectolax>=0.3,<1",
    "pydantic>=2.0,<3",
    "appdirs>=1.4,<2",
    "click>=8.1,<9",
    "rich>=13.0,<15",
]

[project.scripts]
dep-rank = "dep_rank.cli.app:cli"

[project.urls]
Homepage = "https://github.com/j7an/dep-rank"
Repository = "https://github.com/j7an/dep-rank"
Issues = "https://github.com/j7an/dep-rank/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "types-appdirs>=1.4",
    "diff-cover>=10.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "1 week"
# Exempt packages so security fixes released within the cooldown window aren't
# reverted; remove each override once its advisory is older than the global
# cooldown.
#   aiohttp: GHSA-hg6j-4rv6-33pg + GHSA-jg22-mg44-37j8 fix (3.14.0)
exclude-newer-package = { aiohttp = "2030-01-01T00:00:00Z" }

[tool.hatch.build.targets.wheel]
packages = ["src/dep_rank"]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/dep_rank/_version.py"

[tool.coverage.run]
branch = true
source = ["dep_rank"]
relative_files = true
omit = [
    "*/dep_rank/_version.py",  # auto-generated by hatch-vcs; matches src-layout (src/dep_rank/_version.py) and installed-package locations (site-packages/dep_rank/_version.py) — paired with the module-name source = ["dep_rank"] decision in §4.5
]

[tool.coverage.report]
fail_under = 90
show_missing = true
# Additions to coverage.py 7.10+ default exclusions (which already cover
# `# pragma: no cover`, `if (typing\.)?TYPE_CHECKING:`, and one-line ellipsis
# stubs like `def foo() -> int: ...`). Each entry below excludes the matching
# line and its suite. Patterns are unanchored regexes; false positives are
# handled with `# pragma: no cover` on the offending line.
exclude_also = [
    'if __name__ == .__main__.:',
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["src/dep_rank/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "dep_rank.cli.app"
disallow_untyped_decorators = false
